Closed Bug 67523 Opened 23 years ago Closed 23 years ago

new windows open in second monitor

Categories

(Core :: XUL, defect, P2)

PowerPC
Mac System 9.x
defect

Tracking

()

RESOLVED FIXED
mozilla0.8.1

People

(Reporter: tv1k-fry, Assigned: danm.moz)

Details

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Macintosh; N; PPC; en-US; m18) Gecko/20010201
BuildID:    2001020108

When I startup Mozilla,
the very fist browser window opens in the main monitor.
From there, when I press command-N or choose "New Navigator Window"from the
"File" menu the new windows open in the second monitor.

Reproducible: Always
Steps to Reproduce:
1.Startup Mozilla
2.The first window appears on the main monitor.
3.Try to open a new window via shortcut key or menu.


Actual Results:  A new window opens in the second monitor.

Expected Results:  A new window opens in the main monitor.

I have two monitors attached to a PowerMac 7600/120,
running Mac OS J1-9.1.
My main monitor (i.e. with the menubar and Mac OS logo
during the startup) is attached to a PCI video card.
Second monitor (i.e. without the menubar)
is attached to the original video output of the Mac.
Can someone with 2 monitors confirm this?
->danm
Assignee: trudelle → danm
It happens for me as well. My secondary monitor is to the left of my main
monitor. All new windows, aside from the first, appear there, including
Javascript popups and alert dialogs (e.g. "You are leaving a secure site",
"submitting a form", etc.). I'm using the US version of MacOS 9.1 if it makes a
difference.
I am going to confirm this based on that report. This looks pretty nasty!
Status: UNCONFIRMED → NEW
Ever confirmed: true
Kazuhito, bradman: what build are you running? Pink checked in a fix for 
Macintosh window positioning on 28 Jan, days before either of your reports. He 
was having multiple monitor positioning problems, all of which have cleared up 
for him. As far as I know, the Mac is good now. Please verify you're using a 
build made 29 Jan or later.
Happened to me on stock Mozilla 0.8 install. App date is Feb 15, 2001.
I have the exact same configuration as bradman1, main monitor on the right, secondary on 

the left.

I tested on Build ID : 2001021908 and it still happened.

I think the recent fix is somewhat working because each new window is moved a bit to 

make cascading effects.

The only thing is that it appears on the wrong(left, secondary) monitor.
I'm seeing it with monitors arranged as you say, with the main one on the right. 
Targetting 0.9 for now. Gonna need some help from two-monitors-pinkerton on this.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9
Keywords: patch
Priority: -- → P2
->moz0.8.1 to take fix
Target Milestone: mozilla0.9 → mozilla0.8.1
.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Keywords: patch
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.