window positioning security check is now more conversant with multiple monitors. bug 67523 r=hyatt,pinkerton